--- a/Mod 4 project notebook.ipynb
+++ b/Mod 4 project notebook.ipynb
@@ -33,6 +33,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import *\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from cleaning import *\n",
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "from sklearn import metrics\n",
+    "from sklearn.preprocessing import Imputer\n",
+    "from refactoring import *"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
