main notebook populated

--- a/Mo Notebook.ipynb
+++ b/Mo Notebook.ipynb
@@ -2247,6 +2247,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logtarget\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = 'log'+'target'\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
