small format change

--- a/Mod 4 project notebook.ipynb
+++ b/Mod 4 project notebook.ipynb
@@ -1262,8 +1262,9 @@
     }
    ],
    "source": [
-    "channel_list = ['data_channel_is_lifestyle', 'data_channel_is_entertainment', 'data_channel_is_bus', \n",
-    "               'data_channel_is_socmed', 'data_channel_is_tech','data_channel_is_world']\n",
+    "channel_list = ['data_channel_is_lifestyle', 'data_channel_is_entertainment', \n",
+    "                'data_channel_is_bus', 'data_channel_is_socmed', 'data_channel_is_tech',\n",
+    "                'data_channel_is_world']\n",
     "\n",
     "channel_graph(data, channel_list)"
    ]
@@ -1301,8 +1302,9 @@
     }
    ],
    "source": [
-    "weekdays = ['weekday_is_monday', 'weekday_is_tuesday','weekday_is_wednesday', 'weekday_is_thursday', \n",
-    "            'weekday_is_friday','weekday_is_saturday', 'weekday_is_sunday']\n",
+    "weekdays = ['weekday_is_monday', 'weekday_is_tuesday','weekday_is_wednesday', \n",
+    "            'weekday_is_thursday', 'weekday_is_friday','weekday_is_saturday', \n",
+    "            'weekday_is_sunday']\n",
     "\n",
     "weekday_graph(data, weekdays)"
    ]
